--- a/adyen-dropin/package.json
+++ b/adyen-dropin/package.json
@@ -13,10 +13,12 @@
     "@adyen/api-library": "^17.0.0",
     "@headlessui/react": "^2.0.4",
     "axios": "^1.7.2",
+    "geist": "^1.3.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "sonner": "^1.4.41",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
