--- a/adyen-dropin/package.json
+++ b/adyen-dropin/package.json
@@ -13,6 +13,7 @@
     "@adyen/api-library": "^17.0.0",
     "@headlessui/react": "^2.0.4",
     "axios": "^1.7.2",
+    "crypto-js": "^4.2.0",
     "geist": "^1.3.0",
     "next": "14.2.3",
     "react": "^18",
