--- a/adyen-dropin/package.json
+++ b/adyen-dropin/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "sharp": "^0.33.4",
     "sonner": "^1.4.41",
     "zustand": "^4.5.2"
   },
